--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -29,12 +29,5 @@
 
 <br>
 
-<div class="container">
-  <div class="row">
-    <div class="col">
-      <div *ngFor="let empleados of array, let i = index">
-         {{i+1}}: {{empleados.nombre}} {{empleados.apellido}} {{empleados.cargo}} {{empleados.salario}}
-      </div>
-    </div>
-  </div>
-</div>
+<app-hijo *ngFor="let empleados of array, let i = index" [empleadosEnlace]="empleados" [indice]="i"></app-hijo>
+
