se añade ejemplo relacionado con la interacción de componente hijo a padre

--- a/src/app/caracteristicas-empleado/caracteristicas-empleado.component.html
+++ b/src/app/caracteristicas-empleado/caracteristicas-empleado.component.html
@@ -1,1 +1,3 @@
-<p>caracteristicas-empleado works!</p>
+<label>Agregar caracteristica: </label>
+<input type="text" #nuevaCaracteristica>
+<button type="button" (click)="addCaracteristicaEmpleado(nuevaCaracteristica.value)" class="btn btn-secondary">Agregar</button>
