--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,12 @@
+<nav class="navbar navbar-expand-sm bg-light">
+  <ul class="nav navbar-nav"> 
+    <li class="nav-item"><a class="nav-link" href="#">Home</a></li>
+    <li class="nav-item"><a class="nav-link" href="#">Proyectos</a></li>
+    <li class="nav-item"><a class="nav-link" href="#">Quienes Somos</a></li>
+    <li class="nav-item"><a class="nav-link" href="#">Contacto</a></li>
+  </ul> 
+</nav>
+
 <div class="container">
   <h1 class="h1" style="text-align: center;">{{titulo}}</h1>
     <br>
