--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,42 +1,13 @@
 <nav class="navbar navbar-expand-sm bg-light">
   <ul class="nav navbar-nav"> 
-    <li class="nav-item"><a class="nav-link" href="#">Home</a></li>
-    <li class="nav-item"><a class="nav-link" href="#">Proyectos</a></li>
-    <li class="nav-item"><a class="nav-link" href="#">Quienes Somos</a></li>
-    <li class="nav-item"><a class="nav-link" href="#">Contacto</a></li>
+    <li class="nav-item"><a class="nav-link" href="">Home</a></li>
+    <li class="nav-item"><a class="nav-link" href="/proyectos">Proyectos</a></li>
+    <li class="nav-item"><a class="nav-link" href="/quienes">Quienes Somos</a></li>
+    <li class="nav-item"><a class="nav-link" href="/contacto">Contacto</a></li>
   </ul> 
 </nav>
 
-<div class="container">
-  <h1 class="h1" style="text-align: center;">{{titulo}}</h1>
-    <br>
+<router-outlet></router-outlet>
 
-      <form class="form-group row">
-        <div class="form-group col-md-3">
-          <label for="nombre">Nombre:</label>
-          <input type="text"  id="nombre" name="nombre" placeholder="Nombre" class="form-control" [(ngModel)]="cuadroNombre">
-        </div>
-        <div class="form-group col-md-3">
-          <label for="apellido">Apellido:</label>
-          <input type="text"  id="apellido" name="apellido" placeholder="Apellido" class="form-control" [(ngModel)]="cuadroApellido">
-        </div>
-        <div class="form-group col-md-3">
-          <label for="Cargo">Cargo:</label>
-          <input type="text"  id="cargo" name="cargo" placeholder="Cargo" class="form-control" [(ngModel)]="cuadroCargo">
-        </div>
-        <div class="form-group col-md-3">
-          <label for="Salario">Salario:</label>
-          <input type="number"  id="salario" name="salario" placeholder="Salario" class="form-control" [(ngModel)]="cuadroSalario">
-        </div>
-        <div class="col">
-          <input type="submit" class="btn btn-success" value="Ingresar" (click)="enviar()" style="margin-top: 5px;">
-          <input type="submit" class="btn btn-danger" value="Retirar" (click)="retirar()" style="margin-top: 5px;margin-left: 15px;">
-        </div>
 
-      </form>
-</div>
-
-<br>
-
-<app-hijo *ngFor="let empleados of array, let i = index" [empleadosEnlace]="empleados" [indice]="i"></app-hijo>
 
